2014-08-12  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* image-mode.el (image-transform-reset): New command and menu item.
	(image-mode-map): Rearrange the menu items to put presumably more
	obscure items at the end.

2014-08-12  Juri Linkov  <juri@jurta.org>

	* vc/vc-annotate.el (vc-annotate-background-mode):
	Use `with-demoted-errors' instead of `ignore-errors'.  (Bug#18189)

2014-08-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* files.el (out-of-memory-warning-percentage): Turn it off by default.

2014-08-11  Sam Steingold  <sds@gnu.org>

	* textmodes/sgml-mode.el (sgml-validate-command): Set depending on
	the presence of known validators (tidy, (o)nsgmls).

2014-08-11  Ulf Jasper  <ulf.jasper@web.de>

	Newsticker: introduce `newsticker-treeview-date-format'. (Bug#17227)

	* net/newst-treeview.el (newsticker-treeview-date-format): New.
	(newsticker--treeview-list-add-item): Use `newsticker-treeview-date-format'.

2014-08-11  Glenn Morris  <rgm@gnu.org>

	* files.el (basic-save-buffer-2): Revert 2013-01-31 change, which
	chose coding system for writing before backing up, since it causes
	a more serious problem than the one it solves.  (Closes Bug#18141,
	reopens Bug#13522.)

2014-08-11  Martin Rudalics  <rudalics@gmx.at>

	* window.el (window-total-size): Make doc-string more self-contained.

	* window.el (display-buffer-below-selected): Restore original
	behavior if buffer is already displayed in the window below the
	selected one (Bug#18181).

2014-08-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mouse.el (mouse--down-1-maybe-follows-link): Don't convert the down
	event (bug#18212).

2014-08-11  Eli Zaretskii  <eliz@gnu.org>

	* info.el (info): Doc fix.

2014-08-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* info.el (Info-mode-map): Override a global down-mouse-2 binding
	(bug#18212).

2014-08-11  Eli Zaretskii  <eliz@gnu.org>

	* simple.el (default-line-height): A floating-point value of